src/index.css
body {
  overflow: hidden;
  margin: 0;
  padding: 0;
  font-family: "Microsoft YaHei UI", sans-serif;
}

svg {
  overflow: visible;
}

.bg-effect {
  position: absolute;
  z-index : -1;
}

.large-header {
  position: relative;
  width: 100%;
  overflow: hidden;
  background-size: cover;
  background-position: center center;
  z-index: 1;
}

.bg-effect .large-header {
  background : transparent;
}

.bg-effect .main-title {
  text-transform: uppercase;
  font-size: 4.2em;
  letter-spacing: 0.1em;
}

.main-title .thin {
  font-weight: 200;
}

@media only screen and (max-width : 768px) {
  .bg-effect .main-title {
    font-size: 3em;
  }
}

